GALLERY – fix drop zone/thumb gallery spacing

--- a/src/css/badsender-editor.less
+++ b/src/css/badsender-editor.less
@@ -536,3 +536,7 @@
     background-color: black;
   }
 }
+
+.gallery-thumbs {
+  padding-top: 1em;
+}
